# mqtt_kafka_db_sync

./: docker-compose.yml  readme.md  reference.md
replica/: .env  docker-compose.yml
replica/services/database/: init_replica.sql
replica/services/mqtt-db-sync/: Dockerfile  iot_sync.py  requirements.txt
services/kafka-mqtt-translator/: Dockerfile  pyproject.toml  translator.py
services/kafkaconnect/: debezium-connector-config.json
services/mosquitto/: mosquitto.conf
services/postgres/: pg_hba.conf  postgresql.conf  readme.md
services/postgres/init/: 01-create-debezium-user.sql  02-create-test-table.sql
